--- a/cloud-init/kubeadm/node.yaml
+++ b/cloud-init/kubeadm/node.yaml
@@ -9,7 +9,16 @@ runcmd:
   - echo "${sftp_ip}:${sftp_dir}      ${sftp_dir}      nfs rw,noatime,nolock,hard,tcp 0 0" >> /etc/fstab
   - mount -a
   # Kubeadm  
-  - echo "while [ ! -f /shared/kubeadm-join.bash ]; do sleep 1; done; sudo bash /shared/kubeadm-join.bash" >> /tmp/install.sh
+  # - echo "while [ ! -f /shared/kubeadm-join.bash ]; do sleep 1; done; sudo bash /shared/kubeadm-join.bash" >> /tmp/install.sh
+    - |
+    echo '
+    while [ ! -f /shared/kubeadm-join.bash ] || [ ! -f /tmp/kubeadm-join.bash ]; do
+      sleep 1
+    done
+    if [ -f /shared/kubeadm-join.bash ]; then
+      cp /shared/kubeadm-join.bash /tmp/kubeadm-join.bash
+    fi
+    sudo bash /tmp/kubeadm-join.bash >> /tmp/install.sh
   - su ${admin_user} -c "/tmp/install.sh"
   # authorizing docker
   #- su ${admin_user} -c "sudo docker login ${docker_registry} --username ${docker_id} --password ${docker_password}"
