--- a/cloud-init/kubeadm/master.yaml
+++ b/cloud-init/kubeadm/master.yaml
@@ -25,7 +25,7 @@ runcmd:
   # Share the join command with all the nodes using scp
   - |
     for i in $(seq 1 ${nb_nodes}); do
-      node_name=${project_name}-node${i}
+      node_name=${project_name}-node$i
       scp -o StrictHostKeyChecking=no -i /home/${admin_user}/.ssh/${ssh_private_key_name} /shared/kubeadm-join.bash ${admin_user}@$node_name:/tmp/
     done
   - kubectl label nodes `hostname` type=production
