--- a/terraform-modules/registry/registry.yaml
+++ b/terraform-modules/registry/registry.yaml
@@ -19,7 +19,12 @@ manage_resolv_conf: true
 runcmd:
   - echo "127.0.0.1 $(hostname)" | sudo tee -a /etc/hosts
   - mkdir -p ${registry_local_volume} # Mount the volume
-  - if ! blkid ${volume_device}; then mkfs.ext4 ${volume_device}; fi
+  - |
+    if [ -z "${use_existing_volume}" ]; then
+        if ! blkid "${volume_device}"; then
+            mkfs.ext4 "${volume_device}"
+        fi
+    fi  
   - echo "${volume_device} ${registry_local_volume} ext4 defaults 0 2" | tee -a /etc/fstab
   - mount -a
   - install -m 0755 -d /etc/apt/keyrings # Install docker
