--- a/cloud-init/kubeadm/master.yaml
+++ b/cloud-init/kubeadm/master.yaml
@@ -6,8 +6,10 @@ runcmd:
   # Mount SFTP to /DATA directory
   - ls -l /home/${admin_user}/.ssh/
   - mkdir -p ${sftp_dir}
-  - echo "${sftp_ip}:${sftp_dir}      ${sftp_dir}      nfs rw,noatime,nolock,hard,tcp 0 0" >> /etc/fstab
+  - echo "${sftp_ip}:${sftp_dir}      ${sftp_dir}      nfs4 rw,noatime,nolock,hard,tcp 0 0" >> /etc/fstab
   - mount -a
+  # THIS CONVENTION (/shared) IS MOST LIKELY REDUNDANT AS OF SEPTEMBER 2024
+  # Switched to ssh transfer of join command
   # NFS export /shared directory and make it accessible to all subnet
   - echo "/shared `hostname -I | awk '{print $1}' | grep -Po '(\d+\.){3}'`0/24(rw,sync,no_root_squash,no_all_squash)" > /etc/exports
   - mkdir -p /shared
@@ -24,7 +26,7 @@ runcmd:
   - chown ${admin_user}:${admin_user} /home/${admin_user}/.ssh/${ssh_private_key_name}
   - kubeadm token create --print-join-command > /shared/kubeadm-join.bash
   - chmod +x /shared/kubeadm-join.bash
-  # Share the join command with all the nodes using scp
+  # Share the join command with all the nodes using scp -- SEPTEMBER 2024
   - |
     for i in $(seq 1 ${nb_nodes}); do
       node_name=${project_name}-node$i
