--- a/terraform-modules/binderhub/prometheus/prometheus-configmap.yaml
+++ b/terraform-modules/binderhub/prometheus/prometheus-configmap.yaml
@@ -11,12 +11,12 @@ data:
       - job_name: 'binderhub'
         scheme: https
         static_configs:
-          - targets: ['fire.conp.cloud']
+          - targets: ['${binderhub_subdomain}.${binderhub_domain}']
       - job_name: 'jupyterhub'
         scheme: https
         metrics_path: '/jupyter/hub/metrics'
         static_configs:
-          - targets: ['fire.conp.cloud']
+          - targets: ['${binderhub_subdomain}.${binderhub_domain}']
       - job_name: 'node-exporter'
         static_configs:
           - targets: ['node-exporter.monitoring.svc.cluster.local:9100']
