--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -14,7 +14,7 @@ jupyterhub:
       kubernetes.io/tls-acme: "true"
       cert-manager.io/issuer: letsencrypt-production
     tls:
-      - secretName: binder-conp-cloud-tls
+      - secretName: ${project_name}-secret-tls
         hosts:
           - test.conp.cloud
   #https://discourse.jupyter.org/t/pre-building-images-on-binderhub/4325/4
@@ -33,10 +33,10 @@ jupyterhub:
     service:
       type: NodePort
   cull:
-    timeout: 900 #15min
-    every: 30
-    concurrency: 5 #to avoid Hub slow down, 5 concurrent processes
-    maxAge: 7200 #2h
+    timeout: 600 #15min
+    every: 60
+    concurrency: 5
+    maxAge: 1800 #30min
   # https://z2jh.jupyter.org/en/latest/resources/reference.html#singleuser  
   singleuser:
     storage:
@@ -50,10 +50,10 @@ jupyterhub:
         mountPath: /home/jovyan/data  # where each user can reach shared data
         readOnly : true
     memory:
-       guarantee: 4G
-       limit: 8G
+       guarantee: 1G
+       limit: 3G
     cpu:
-       guarantee: 1
+       guarantee: 0.5
     startTimeout: 3600 #1h
     # https://zero-to-jupyterhub.readthedocs.io/en/latest/jupyterhub/customizing/user-environment.html#about-user-storage-and-adding-files-to-it
 
@@ -72,8 +72,14 @@ config:
       - ^shishirchoudharygic/mltraining.*
       - ^hmharshit/mltraining.*
   BinderHub:
+    template_path: /etc/binderhub/custom/templates
+    extra_static_path: /etc/binderhub/custom/static
+    extra_static_url_prefix: /extra_static/
+    template_variables:
+        EXTRA_STATIC_URL_PREFIX: "/extra_static/"
+    hub_url: https://${binderhub_subdomain}.${binderhub_domain}/jupyter
     cors_allow_origin: '*'
-    hub_url: https://test.conp.cloud/jupyter
+    hub_url: https://${binderhub_subdomain}.${binderhub_domain}/jupyter
     use_registry: true
     image_prefix: binder-registry.conp.cloud/binder-registry.conp.cloud/binder-
     banner_message: |
@@ -85,7 +91,7 @@ service:
 ingress:
   enabled: true
   hosts:
-    - test.conp.cloud
+    - ${binderhub_subdomain}.${binderhub_domain}
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
@@ -94,6 +100,29 @@ ingress:
     enabled: true
     type: nginx
   tls:
-    - secretName: binder-conp-cloud-tls
+    - secretName: ${project_name}-secret-tls
       hosts: 
-        - test.conp.cloud
+        - ${binderhub_subdomain}.${binderhub_domain}
+
+initContainers:
+  - name: git-clone-templates
+    image: alpine/git
+    args:
+      - clone
+      - --single-branch
+      - --branch=preview
+      - --depth=1
+      - --
+      - https://github.com/neurolibre/binder-template
+      - /etc/binderhub/custom
+    securityContext:
+      runAsUser: 0
+    volumeMounts:
+      - name: custom-templates
+        mountPath: /etc/binderhub/custom
+extraVolumes:
+  - name: custom-templates
+    emptyDir: {}
+extraVolumeMounts:
+  - name: custom-templates
+    mountPath: /etc/binderhub/custom
