--- a/terraform-modules/binderhub/assets/prod-config.yaml
+++ b/terraform-modules/binderhub/assets/prod-config.yaml
@@ -80,6 +80,11 @@ config:
       - ^shishirchoudharygic/mltraining.*
       - ^hmharshit/mltraining.*
   BinderHub:
+    template_path: /etc/binderhub/custom/templates
+    extra_static_path: /etc/binderhub/custom/static
+    extra_static_url_prefix: /extra_static/
+    template_variables:
+        EXTRA_STATIC_URL_PREFIX: "/extra_static/"
     hub_url: https://${binderhub_subdomain}.${binderhub_domain}/jupyter
     use_registry: true
     image_prefix: binder-registry.conp.cloud/binder-registry.conp.cloud/binder-
@@ -105,3 +110,26 @@ ingress:
     - secretName: ${project_name}-secret-tls
       hosts:
         - ${binderhub_subdomain}.${binderhub_domain}
+
+initContainers:
+  - name: git-clone-templates
+    image: alpine/git
+    args:
+      - clone
+      - --single-branch
+      - --branch=main
+      - --depth=1
+      - --
+      - https://github.com/neurolibre/binder-template
+      - /etc/binderhub/custom
+    securityContext:
+      runAsUser: 0
+    volumeMounts:
+      - name: custom-templates
+        mountPath: /etc/binderhub/custom
+extraVolumes:
+  - name: custom-templates
+    emptyDir: {}
+extraVolumeMounts:
+  - name: custom-templates
+    mountPath: /etc/binderhub/custom
